# bubble-tea

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/bubble_tea/: analysis.py  parser.py  scraping.py
